Add some nicer colors

--- a/ui/index.html
+++ b/ui/index.html
@@ -100,6 +100,7 @@
             showRoller: true,
             rollPeriod: 14,
             strokeWidth: 1,
+	    colors: ["rgb(57, 106, 177)", "rgb(218, 124, 48)", "rgb(62,150,81)"]
           });
       }
     </script>
