Add some hints on how to use the UI

--- a/ui/index.html
+++ b/ui/index.html
@@ -108,5 +108,8 @@
   <body>
     <div id="progress">Loading..</div>
     <div id='chart' style="width:100%"></div>
+    <p>Zoom: click-drag</p>
+    <p>Pan: shift-click-drag</p>
+    <p>Restore zoom level: double-click</p>
   </body>
 </html>
