Add a link to GitHub

--- a/ui/index.html
+++ b/ui/index.html
@@ -111,5 +111,6 @@
     <p>Zoom: click-drag</p>
     <p>Pan: shift-click-drag</p>
     <p>Restore zoom level: double-click</p>
+    <a href="https://github.com/sbadame/fermenter">See all the code on github.</a>
   </body>
 </html>
