--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,8 @@
     <script>
       "use strict";
 
+      var graph;
+
       // Initialize Firebase
       var config = {
         apiKey: "AIzaSyD7CFADGoS9hi_gnJofB-IqygN8050jtW0",
@@ -27,7 +29,7 @@
       fs.collection('ui').doc('data').get().then((doc) => {
          const gzipped_result = doc.data().gzipped;
          const json_result = JSON.parse(pako.inflate(gzipped_result.toUint8Array(), {to: 'string'}));
-	 drawData(json_result);
+         drawData(json_result);
          document.getElementById('progress').remove();
       });
 
@@ -35,13 +37,13 @@
        * Display the data for the selected time.
        */
       function logPoints(points) {
-	points.sort((a, b) => a.name < b.name);
-	const datetime = new Date(points[0].xval).toLocaleString(undefined, {hour12: false, day: '2-digit', month:'short', year: 'numeric', hour: '2-digit', minute: '2-digit', second: '2-digit'});
-	let text = datetime;
-	for (let point of points) {
-          text += ` ${point.name}: ${point.yval.toFixed(1)},`
-	}
-	document.getElementById('logger').innerText = text;
+	      points.sort((a, b) => a.name < b.name);
+	      const datetime = new Date(points[0].xval).toLocaleString(undefined, {hour12: false, day: '2-digit', month:'short', year: 'numeric', hour: '2-digit', minute: '2-digit', second: '2-digit'});
+	      let text = datetime;
+	      for (let point of points) {
+                text += ` ${point.name}: ${point.yval.toFixed(1)},`
+	      }
+	      document.getElementById('logger').innerText = text;
       }
 
       function drawData(logs) {
@@ -105,16 +107,16 @@
           prev = curr;
         }
 
-        new Dygraph(document.getElementById("chart"), graph_data,
+        graph = new Dygraph(document.getElementById("chart"), graph_data,
           {
-            labels: ['time', 'In water', 'Garage', 'In fridge'],
+            labels: ['time', 'Water', 'Garage', 'Fridge'],
             ylabel: 'Temperature (F)',
             legend: 'always',
             showRoller: true,
             rollPeriod: 14,
             strokeWidth: 1,
-	    colors: ["rgb(57, 106, 177)", "rgb(218, 124, 48)", "rgb(62,150,81)"],
-	    clickCallback: (e, x, points) => logPoints(points),
+            colors: ["rgb(57, 106, 177)", "rgb(218, 124, 48)", "rgb(62,150,81)"],
+            clickCallback: (e, x, points) => logPoints(points),
           });
       }
     </script>
