--- a/ui/index.html
+++ b/ui/index.html
@@ -26,13 +26,20 @@
       var fs = firebase.firestore();
       var result = null;
       fs.settings({timestampsInSnapshots: true});
-      fs.collection('ui').doc('data').get().then((doc) => {
+      const templog_entries = fs.collection('ui').doc('data').get().then((doc) => {
          const gzipped_result = doc.data().gzipped;
-         const json_result = JSON.parse(pako.inflate(gzipped_result.toUint8Array(), {to: 'string'}));
-         drawData(json_result);
+         return JSON.parse(pako.inflate(gzipped_result.toUint8Array(), {to: 'string'}));
+      });
+      const controller_state = fs.collection('controller_logentries').orderBy('timestamp').get().then(results => {
+        return results.docs.map(d => d.data());
+      });
+      Promise.all([templog_entries, controller_state]).then(results => {
+         const tempLogs = results[0];
+         const controller_state = results[1];
+         drawData(tempLogs, controller_state);
          document.getElementById('progress').remove();
       });
-
+      
       /**
        * Display the data for the selected time.
        */
@@ -46,7 +53,7 @@
 	      document.getElementById('logger').innerText = text;
       }
 
-      function drawData(logs) {
+      function drawData(tempLogs, controllerLogs) {
         /**
          * Arggg, careful with this loop. Lots of rows and performance matters.
          *
@@ -93,11 +100,11 @@
         const TEMP = 3;
 
         const graph_data = [];
-        let prev = logs[TIMESTAMP];
+        let prev = tempLogs[TIMESTAMP];
         let entry = {};
         entry[prev[THERMOMETER]] = prev[TEMP];
-        for (let i = 1; i < logs.length; i++) {
-          let curr = logs[i];
+        for (let i = 1; i < tempLogs.length; i++) {
+          let curr = tempLogs[i];
           if (prev[TIMESTAMP] !== curr[TIMESTAMP]) {
             // Convert seconds to millis for javascript.
             graph_data.push([new Date(prev[TIMESTAMP] * 1000), entry['In water'], entry['Garage'], entry['In fridge']]);
@@ -118,16 +125,36 @@
             colors: ['rgb(57, 106, 177)', 'rgb(218, 124, 48)', 'rgb(62,150,81)'],
             clickCallback: (e, x, points) => logPoints(points),
             underlayCallback: (canvas, area, graph) => {
-              const start = Date.parse('Nov 12, 2018, 00:24:07');
-              const end = Date.parse('Nov 13, 2018, 00:24:07');
-              const bottom_left = graph.toDomCoords(start, -20);
-              const bottom_right = graph.toDomCoords(end, +20);
-              const left = bottom_left[0];
-              const right = bottom_right[0];
-              canvas.fillStyle = 'rgba(102, 255, 255, 1.0)';
-              canvas.fillRect(left, area.y, right - left, area.h);
+
+              let i = 0;
+              while(i < controllerLogs.length && controllerLogs[i].state !== 'cooling') {
+                i++;
+              }
+              if (i >= controllerLogs.length) {
+                return;
+              }
+
+              let prev = controllerLogs[i];
+              for (let i = 1; i < controllerLogs.length; i++) {
+                let log = controllerLogs[i];
+                if (log.state == prev.state) {
+                  continue;
+                }
+                highlight(new Date(prev.timestamp.seconds * 1000), new Date(log.timestamp.seconds * 1000), canvas, area, graph);
+                prev = log;
+              }
+              highlight(new Date(prev.timestamp.seconds * 1000), new Date(), canvas, area, graph);
             }
           });
+      }
+
+      function highlight(start, end, canvas, area, graph) {
+        const bottom_left = graph.toDomCoords(start, -20);
+        const bottom_right = graph.toDomCoords(end, +20);
+        const left = bottom_left[0];
+        const right = bottom_right[0];
+        canvas.fillStyle = 'rgba(102, 255, 255, 1.0)';
+        canvas.fillRect(left, area.y, right - left, area.h);
       }
     </script>
   </head>
